Add support for unix domain sockets

--- a/proxy.conf
+++ b/proxy.conf
@@ -1,3 +1,4 @@
 jellyfin=http://100.66.89.118:8096
 homeassistant=http://100.66.89.118:8123
 immich=http://100.66.89.118:2283
+grafana=unix:/run/user/1000/grafana/grafana.sock
